# kitt

./: .gitignore  CONTRIBUTING.md  MANIFEST.in  PLUGINS.md  README.md  TODO.md  container.py  docker.py  kitt.py  logger.py  plugins.py  requirements.txt  setup.cfg
.github/workflows/: build-and-publish.yml
examples/: CTF.toml  commands.md  default.toml  devops-light.json  devops.json  devops.toml  files.toml  gui_app.toml  pentest.toml
kitt/: __init__.py  client.py  config.py  container.py  crypto.py  images.py  kitt.py  logger.py  plugins.py  vault.py
kitt/examples/: default.toml
kitt/static/: Dockerfile.docker  Dockerfile.j2  Dockerfile.podman  Dockerfile.template  default.toml
kitt/static/plugins/: copy.j2  download.j2  git.j2  pip.j2  sh.j2  shell.j2  zsh.j2
static/: Dockerfile.template  default.toml
tests/: test_vault.py
