[metadata]
name = kitt
version = attr: kitt.__version__
author = Charles SENGES
author_email = charles.senges.io@protonmail.com
description = A portable containerized shell
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/senges/kitt
project_urls =
    Bug Tracker = https://github.com/senges/kitt/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    docker
    dockerpty
    rich
    toml
    click
    fs
python_requires = >=3.6
include_package_data = True

[options.entry_points]
console_scripts =
    kitt = kitt:main